fix syntax error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,8 @@
 
 .footer-flex {
     @apply flex flex-col md:flex-row justify-center items-center justify-items-center;
-
+}
+    
 .w-fitcontent {
     width: fit-content;
 
