--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -7,4 +7,26 @@
 
 .w-fitcontent {
     width: fit-content;
+}
+
+@layer base {
+    h1 {
+        @apply text-5xl font-bold font-rubik leading-loose;
+    }
+    h2,
+    h3 {
+        @apply text-3xl font-medium font-rubik leading-loose;
+    }
+    h4 {
+        @apply text-xl leading-loose font-rubik font-semibold;
+    }
+    p {
+        @apply text-lg font-rubik font-light mb-5;
+    }
+    a {
+        @apply font-semibold;
+    }
+    strong {
+        @apply font-semibold;
+    }
 }
